--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vite App</title>
+    <style>
+      html, body, #app {
+        background-color: rgb(154, 199, 255);
+        padding: 0;
+        margin: 0;
+        height: 100%;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
